<resources>
    <string name="app_name">VideoMeetingApplication</string>
    <string name="helloo">Helloo</string>
    <string name="video_meeting_conferencing">video Meeting | Conferencing</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email :</string>
    <string name="exmple_abc_gmail_com">Exmple :- abc@gmail.com</string>
    <string name="email_errors_are_shown_here">email errors are shown here</string>
    <string name="password">Password :</string>
    <string name="password_field">* * * * * * * *</string>
    <string name="password_errors_are_shown_here">password errors are shown here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="a">A</string>
    <string name="ashutosh_dhamaniya">Ashutosh Dhamaniya</string>
    <string name="ashutoshdhamaniya_gmail_com">ashutoshdhamaniya@gmail.com</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
</resources>