<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/helloo"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/video_meeting_conferencing"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_to_your_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:includeFontPadding="false"
            android:layout_marginTop="15dp"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/loginText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exmple_abc_gmail_com"
                    android:background="@null"
                    android:textColor="@color/colorBlack"
                    android:paddingStart="15dp"
                    android:inputType="textEmailAddress"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/emailErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/email_errors_are_shown_here"
                    android:layout_marginStart="16dp"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:textColor="@color/errorText"
                    tools:ignore="SmallSp"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="5dp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_field"
                    android:background="@null"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    tools:ignore="RtlSymmetry"/>

                <TextView
                    android:id="@+id/passwordErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/password_errors_are_shown_here"
                    android:layout_marginStart="16dp"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:textColor="@color/errorText"
                    tools:ignore="SmallSp"
                    android:visibility="invisible"
                    android:layout_marginBottom="30dp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="19sp"/>

                    <ProgressBar
                        android:id="@+id/loginProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"/>

                </FrameLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dontHaveAccountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginCardView"
            android:text="@string/don_t_have_an_account"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dontHaveAccountText"
            android:text="@string/sign_up"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>